src/app/app_render_tests/snapshots/jiq__app__app_render_tests__processing_tests__snapshot_processing_with_previous_result.snap
---
source: src/app/app_render_tests/processing_tests.rs
assertion_line: 74
expression: output
---
"╭⠹ String ─────────────────────────────────────────────────────────────────────╮"
"│"Alice"                                                                       │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰───────────────────────────────────────────────────────────────── L1-1/1 (0%) ╯"
"╭ Query [INSERT] ───────────────────────────────────────── Ctrl+A AI Assistant ╮"
"│.age                                                                          │"
"╰─── Shift+Tab Navigate Results • Enter Output Result • Ctrl+Q Output Query ───╯"
" F1 Help • Ctrl+S Snippets • Ctrl+F Search • Enter Output Result • Ctrl+Q Output"
