src/app/app_render_tests/snapshots/jiq__app__app_render_tests__processing_tests__snapshot_processing_with_syntax_error.snap
---
source: src/app/app_render_tests/processing_tests.rs
assertion_line: 97
expression: output
---
"╭⠸    ⚠ Syntax Error   String | Showing last successful result ─── L1-1/1 (0%) ╮"
"│"Alice"                                                                       │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"╭ Query [INSERT] ───────────────────────────────────────── Ctrl+A AI Assistant ╮"
"│.invalid[                                                                     │"
"╰──────────────── Ctrl+T Navigate Results • Ctrl+E Show Error ─────────────────╯"
" F1 Help • Ctrl+S Snippets • Ctrl+F Search • Enter Output Result • Ctrl+O Copy R"
